--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div class="flex-container">
         <div id="states">
           <img src="imgs/states.png" alt="dropdown" width="700" length="500">
-          <h2 style="padding-left: 50px;" class="choose">CHOOSE YOUR STATES</h2>
+          <!--<h2 style="padding-left: 50px;" class="choose">CHOOSE YOUR STATES</h2>-->
         </div>
         <div id="jobs">
-          <img src="imgs/jobs3.png" alt="dropdown" width= "700" length="200">
-          <h2 style="padding-left: 30%;" class="choose">CHOOSE YOUR JOBS</h2>
+          <img src="imgs/jobs3.png" alt="dropdown" width= "660" length="200">
+          <!--<h2 style="padding-left: 30%;" class="choose">CHOOSE YOUR JOBS</h2>-->
         </div>
-        <div style="padding-left: 13%;">
-          <img src="imgs/skills3.png" alt="dropdown" width="400" length="200">
-          <h2 style="padding-left: 70%;" class="choose">CHOOSE YOUR SKILLS</h2>
+        <div style="padding-left: 3%;">
+          <img src="imgs/skills3.png" alt="dropdown" width="700" length="200">
+          <!--<h2 style="padding-left: 70%;" class="choose">CHOOSE YOUR SKILLS</h2>-->
         </div>
         <form id="filterForm" action="/filter" method="post">
           <select class="states" name="states" id="states" multiple>
@@ -82,32 +82,33 @@
               <th>Job Title</th>
             </tr> -->
             <tr>
-              <td><input type="checkbox"  name="jobs" value="Goon">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Goon">
                 <label for="job1">Goon</label><br></td>
-            <td><input type="checkbox"  name="jobs" value="Financial Analyst">
-                <label for="job1">Financial Analyst</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Heavy Weapons Specialist">
-                <label for="job1">Heavy Weapons Specialist</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Engineer">
+            <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Financial Analyst"><br>
+                <label for="job1">Financial Analyst</label></td>
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Heavy Weapons Specialist"><br>
+                <label for="job1">Heavy Weapons Specialist</label></td>
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Engineer">
                 <label for="job1">Engineer</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Wizard">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Wizard">
                   <label for="job1">Wizard</label><br></td>
               </tr>
               <tr>
-              <td><input type="checkbox"  name="jobs" value="Right Hand Woman">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Right Hand Woman">
                   <label for="job1">Right Hand Woman</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Executioner">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Executioner">
                   <label for="job1">Executioner</label><br></td> 
-              <td><input type="checkbox"  name="jobs" value="Hacker">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Hacker">
                   <label for="job1">Hacker</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Manager">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Manager">
                   <label for="job1">Manager</label><br></td>
-              <td><input type="checkbox"  name="jobs" value="Cook">
+              <td><input type="checkbox" class="largerCheckbox" name="jobs" value="Cook">
                   <label for="job1">Cook</label><br></td>
             </tr>            
           </table>
 
           <table class="skills">
+          
             <tr>
               <th>Skill Type</th>
               <th>Beginner</th>
@@ -115,103 +116,103 @@
               <th>Advanced</th>
             </tr>
             <tr>
-          <td><input type="checkbox" id="skill1" name="Enthusiasm" onclick="handler('1')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill1" name="Enthusiasm" onclick="handler('1')">
             <label for="skill1">Enthusiasm</label><br></td>
-          <td><input type="checkbox" id="beg1" name="Enthusiasm" value="beg" onclick="handler1('1')">
+          <td><input type="checkbox" class="largerCheckbox" id="beg1" name="Enthusiasm" value="beg" onclick="handler1('1')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med1" name="Enthusiasm" value="med"  onclick="handler1('1')">
+          <td><input type="checkbox" class="largerCheckbox" id="med1" name="Enthusiasm" value="med"  onclick="handler1('1')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv1" name="Enthusiasm" value="adv"  onclick="handler1('1')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv1" name="Enthusiasm" value="adv"  onclick="handler1('1')">
             <label for="adv"></label><br></td>                    
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill2" name="Programming" onclick="handler('2')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill2" name="Programming" onclick="handler('2')">
             <label for="skill2">Programming</label><br></td>
-          <td><input type="checkbox" id="beg2" name="Programming" value="beg" onclick="handler1('2')">
+          <td><input type="checkbox" class="largerCheckbox" id="beg2" name="Programming" value="beg" onclick="handler1('2')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med2" name="Programming" value="med" onclick="handler1('2')">
+          <td><input type="checkbox" class="largerCheckbox" id="med2" name="Programming" value="med" onclick="handler1('2')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv2" name="Programming" value="adv"  onclick="handler1('2')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv2" name="Programming" value="adv"  onclick="handler1('2')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill3" name="Alchemy" onclick="handler('3')">
-            <label for="skill3">Alchemy</label><br></td>
-          <td><input type="checkbox" id="beg3" name="Alchemy" value="beg" onclick="handler1('3')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill3" name="Alchemy" onclick="handler('3')">
+            <br><label for="skill3">Alchemy</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg3" name="Alchemy" value="beg" onclick="handler1('3')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med3" name="Alchemy" value="med" onclick="handler1('3')">
+          <td><input type="checkbox" class="largerCheckbox" id="med3" name="Alchemy" value="med" onclick="handler1('3')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv3" name="Alchemy" value="adv" onclick="handler1('3')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv3" name="Alchemy" value="adv" onclick="handler1('3')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill4" name="Lack of Critical Thinking" onclick="handler('4')">
-            <label for="skill4">Lack of Critical Thinking</label><br></td>
-          <td><input type="checkbox" id="beg4" name="Lack of Critical Thinking" value="beg" onclick="handler1('4')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill4" name="Lack of Critical Thinking" onclick="handler('4')">
+            <br><label for="skill4">Lack of Critical Thinking</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg4" name="Lack of Critical Thinking" value="beg" onclick="handler1('4')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med4" name="Lack of Critical Thinking" value="med" onclick="handler1('4')">
+          <td><input type="checkbox" class="largerCheckbox" id="med4" name="Lack of Critical Thinking" value="med" onclick="handler1('4')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv4" name="Lack of Critical Thinking" value="adv" onclick="handler1('4')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv4" name="Lack of Critical Thinking" value="adv" onclick="handler1('4')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill5" name="Data Analysis" onclick="handler('5')">
-            <label for="skill5">Data Analysis</label><br></td>
-          <td><input type="checkbox" id="beg5" name="Data Analysis" value="beg" onclick="handler1('5')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill5" name="Data Analysis" onclick="handler('5')">
+            <br><label for="skill5">Data Analysis</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg5" name="Data Analysis" value="beg" onclick="handler1('5')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med5" name="Data Analysis" value="med" onclick="handler1('5')">
+          <td><input type="checkbox" class="largerCheckbox" id="med5" name="Data Analysis" value="med" onclick="handler1('5')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv5" name="Data Analysis" value="adv" onclick="handler1('5')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv5" name="Data Analysis" value="adv" onclick="handler1('5')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill6" name="Engineering" onclick="handler('6')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill6" name="Engineering" onclick="handler('6')">
             <label for="skill6">Engineering</label><br></td>
-          <td><input type="checkbox" id="beg6" name="Engineering" value="beg" onclick="handler1('6')">
+          <td><input type="checkbox" class="largerCheckbox" id="beg6" name="Engineering" value="beg" onclick="handler1('6')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med6" name="Engineering" value="med" onclick="handler1('6')">
+          <td><input type="checkbox" class="largerCheckbox" id="med6" name="Engineering" value="med" onclick="handler1('6')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv6" name="Engineering" value="adv" onclick="handler1('6')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv6" name="Engineering" value="adv" onclick="handler1('6')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill7" name="Muscles" onclick="handler('7')">
-            <label for="skill7">Muscles</label><br></td>
-          <td><input type="checkbox" id="beg7" name="Muscles" value="beg" onclick="handler1('7')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill7" name="Muscles" onclick="handler('7')">
+            <br><label for="skill7">Muscles</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg7" name="Muscles" value="beg" onclick="handler1('7')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med7" name="Muscles" value="med" onclick="handler1('7')">
+          <td><input type="checkbox" class="largerCheckbox" id="med7" name="Muscles" value="med" onclick="handler1('7')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv7" name="Muscles" value="adv" onclick="handler1('7')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv7" name="Muscles" value="adv" onclick="handler1('7')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill8" name="Oral Communication" onclick="handler('8')">
-            <label for="skill8">Oral Communication</label><br></td>
-          <td><input type="checkbox" id="beg8" name="Oral Communication" value="beg" onclick="handler1('8')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill8" name="Oral Communication" onclick="handler('8')">
+            <br><label for="skill8">Oral Communication</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg8" name="Oral Communication" value="beg" onclick="handler1('8')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med8" name="Oral Communication" value="med" onclick="handler1('8')">
+          <td><input type="checkbox" class="largerCheckbox" id="med8" name="Oral Communication" value="med" onclick="handler1('8')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv8" name="Oral Communication" value="adv" onclick="handler1('8')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv8" name="Oral Communication" value="adv" onclick="handler1('8')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill9" name="Problem Solving" onclick="handler('9')">
-            <label for="skill9">Problem Solving</label><br></td>
-          <td><input type="checkbox" id="beg9" name="Problem Solving" value="beg" onclick="handler1('9')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill9" name="Problem Solving" onclick="handler('9')">
+            <br><label for="skill9">Problem Solving</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg9" name="Problem Solving" value="beg" onclick="handler1('9')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med9" name="Problem Solving" value="med" onclick="handler1('9')">
+          <td><input type="checkbox" class="largerCheckbox" id="med9" name="Problem Solving" value="med" onclick="handler1('9')">
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv9" name="Problem Solving" value="adv" onclick="handler1('9')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv9" name="Problem Solving" value="adv" onclick="handler1('9')">
             <label for="adv"></label><br></td>  
         </tr>
         <tr>
-          <td><input type="checkbox" id="skill10" name="Cooking" onclick="handler('10')">
-            <label for="skill10">Cooking</label><br></td>
-          <td><input type="checkbox" id="beg10" name="Cooking" value="beg" onclick="handler1('10')">
+          <td><input type="checkbox" class="largerCheckbox" id="skill10" name="Cooking" onclick="handler('10')">
+            <br><label for="skill10">Cooking</label><br></td>
+          <td><input type="checkbox" class="largerCheckbox" id="beg10" name="Cooking" value="beg" onclick="handler1('10')">
             <label for="beg"></label><br></td>
-          <td><input type="checkbox" id="med10" name="Cooking" value="med" onclick="handler1('10')">   
+          <td><input type="checkbox" class="largerCheckbox" id="med10" name="Cooking" value="med" onclick="handler1('10')">   
             <label for="med"></label><br></td>
-          <td><input type="checkbox" id="adv10" name="Cooking" value="adv" onclick="handler1('10')">
+          <td><input type="checkbox" class="largerCheckbox" id="adv10" name="Cooking" value="adv" onclick="handler1('10')">
             <label for="adv"></label><br></td>
             </tr>
           </table>
